--- a/gatsby-theme-pirate-princess-picture-book/package.json
+++ b/gatsby-theme-pirate-princess-picture-book/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-sharp": "^3.2.1",
-    "gatsby-source-filesystem": "^3.2.0"
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0"
   }
 }
